--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,9 @@ name = "pypi"
 
 [packages]
 django = "*"
+django-crispy-forms = "*"
+crispy-bootstrap5 = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
